--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <img src="./images/logo.svg" alt="Spots Logo" class="header__logo" />
+      </header>
       <main class="content">
         <section class="profile"></section>
         <section class="cards"></section>
