--- a/index.html
+++ b/index.html
@@ -25,10 +25,33 @@
       <header class="header">
         <img src="./images/logo.svg" alt="Spots Logo" class="header__logo" />
       </header>
+
       <main class="content">
-        <section class="profile"></section>
+        <section class="profile">
+          <img
+            src="./images/avatar.jpg"
+            alt="profile picture for user"
+            class="profile__avatar"
+          />
+
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button class="profile__edit-button">
+              <img src="./images/edit-icon.svg" alt="pencil icon" />
+              Edit Profile
+            </button>
+          </div>
+
+          <button class="profile__add-button">
+            <img src="./images/plus-icon.svg" alt="plus icon" />
+            New Post
+          </button>
+        </section>
+
         <section class="cards"></section>
       </main>
+
       <footer class="footer"></footer>
     </div>
   </body>
