--- a/index.html
+++ b/index.html
@@ -128,6 +128,40 @@
       <footer class="footer">
         <p class="footer__copyright">2025 &copy; Spots</p>
       </footer>
+
+      <!-- hidden modal -->
+      <div class="modal modal_is-opened">
+        <div class="modal__popup">
+          <button type="button" class="modal__close-button">
+            <img src="./images/close_icon.svg" alt="close out button" />
+          </button>
+          <h2 class="modal__title">Edit Profile</h2>
+
+          <form class="modal__form">
+            <label for="profile-name-input" class="modal__label">
+              Name
+              <input
+                id="profile-name-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your name"
+              />
+            </label>
+
+            <label for="profile-description-input" class="modal__label">
+              Description
+              <input
+                id="profile-description-input"
+                type="text"
+                class="modal__input"
+                placeholder="Describe youruself"
+              />
+            </label>
+
+            <button type="submit" class="modal__submit-button">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
