Added styles and 2nd hidden modal.

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         <p class="footer__copyright">2025 &copy; Spots</p>
       </footer>
 
-      <!-- hidden modal -->
-      <div class="modal modal_is-opened">
+      <!-- Edit Profile hidden modal -->
+      <div class="modal">
         <div class="modal__popup">
           <button type="button" class="modal__close-button">
             <img src="./images/close_icon.svg" alt="close out button" />
@@ -154,7 +154,41 @@
                 id="profile-description-input"
                 type="text"
                 class="modal__input"
-                placeholder="Describe youruself"
+                placeholder="Describe yourself"
+              />
+            </label>
+
+            <button type="submit" class="modal__submit-button">Save</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- New post hidden modal -->
+      <div class="modal">
+        <div class="modal__popup">
+          <button type="button" class="modal__close-button">
+            <img src="./images/close_icon.svg" alt="close out button" />
+          </button>
+          <h2 class="modal__title">New Post</h2>
+
+          <form class="modal__form">
+            <label for="new-image-input" class="modal__label">
+              Image link
+              <input
+                id="new-image-input"
+                type="text"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+              />
+            </label>
+
+            <label for="new-image-caption-input" class="modal__label">
+              Caption
+              <input
+                id="new-image-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
               />
             </label>
 
