added a javascipt file and made selections for opening and closing module.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </footer>
 
       <!-- Edit Profile hidden modal -->
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__popup">
           <button type="button" class="modal__close-button">
             <img src="./images/close_icon.svg" alt="close out button" />
@@ -164,7 +164,7 @@
       </div>
 
       <!-- New post hidden modal -->
-      <div class="modal">
+      <div class="modal" id="new-post-modal">
         <div class="modal__popup">
           <button type="button" class="modal__close-button">
             <img src="./images/close_icon.svg" alt="close out button" />
@@ -197,5 +197,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
