edited changes from DOT review

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-button" aria-label="Like button card"></button>></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
 
@@ -70,7 +70,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant Terrace</h2>
-                <button type="button" class="card__like-button" aria-label="Like button card"></button>></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
 
@@ -82,7 +82,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
-                <button type="button" class="card__like-button" aria-label="Like button card"></button>></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
 
@@ -94,7 +94,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">A very long bridge, over the forest</h2>
-                <button type="button" class="card__like-button" aria-label="Like button card"></button>></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
 
@@ -106,7 +106,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-button" aria-label="Like button card"></button>></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
 
@@ -118,7 +118,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
-                <button type="button" class="card__like-button" aria-label="Like button card"></button>></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
           </ul>
