fix: changed names of blocks to comply with BEM

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             <!-- card template -->
             <template id="card-template">
               <li class="card">
-                <button class="card__delete_button" type="button"></button>
+                <button
+                  class="card__delete card__delete_button"
+                  type="button"
+                ></button>
                 <img src="" alt="" class="card__image" />
                 <div class="card__content">
                   <h2 class="card__title">Val Thorens</h2>
@@ -80,7 +83,7 @@
           >
             <img src="./images/close_image_icon.svg" alt="close out button" />
           </button>
-          <p class="modal__image-caption">No caption inputted</p>
+          <p class="modal__image_caption">No caption inputted</p>
         </div>
       </div>
 
