--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 required
                 minlength="2"
                 maxlength="40"
+                novalidate
               />
               <span class="modal__error">Please fill out this field.</span>
             </label>
@@ -120,6 +121,7 @@
                 required
                 minlength="2"
                 maxlength="200"
+                novalidate
               />
               <span class="modal__error"
                 >Please lengthen this text to 2 characters or more (you are
@@ -149,6 +151,7 @@
                 class="modal__input"
                 placeholder="Paste a link to the picture"
                 required
+                novalidate
               />
               <span class="modal__error"></span>
             </label>
@@ -163,6 +166,7 @@
                 required
                 minlength="2"
                 maxlength="30"
+                novalidate
               />
               <span class="modal__error"></span>
             </label>
