--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   class="card__delete card__delete-button"
                   type="button"
                 ></button>
-                <img src="" alt="" class="card__image" />
+                <img src="#" alt="" class="card__image" />
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button type="button" class="card__like-button"></button>
